# TaskBot

./: .stylish-haskell.yaml  .travis.yml  HLint.hs  LICENSE  README.md  SuzianBot.cabal  TaskBot.cabal  bot-commands.txt  stack.yaml
app/: BotCommands.hs  DB.hs  Main.hs  TelegramApi.hs  Tools.hs
app/Database/Persist/: Extra.hs
exe/: Main.hs
lib/: Bot.hs  BotCommands.hs  Classes.hs  Const.hs  DB.hs  Handlers.hs  Production.hs  Tools.hs
lib/Database/Persist/: Extra.hs
src/: Lib.hs  TelegramApi.hs
test/: Spec.hs  Testing.hs
