name:                TaskBot
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/SuzianBot#readme
license:             BSD3
license-file:        LICENSE
author:              Kirdon
maintainer:          kemphack@mail.ru
copyright:           2016 Kirdon
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10		


executable TaskBot-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, HTTP, http-types, http-client-tls, http-client, bytestring
  default-language:    Haskell2010
  other-modules:       TelegramApi

test-suite TaskBot-test	
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, HTTP
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MCL1303/TaskBot
