name:                TaskBot
version:             0.1.0.0
synopsis:            Task bot for Telegram
description:         Please see README.md
homepage:            https://github.com/MCL1303/TaskBot
license:             BSD3
license-file:        LICENSE
author:              Kemphag
maintainer:          kemphack@mail.ru
copyright:           2016 Kemphag
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:   lib
  exposed-modules:  Bot
                    BotCommands
                    Const
                    Tools
  other-modules:    Database.Persist.Extra
                    DB
  default-language: Haskell2010
  build-depends:    base
                  , http-client
                  , monad-control
                  , monad-logger
                  , mtl
                  , persistent
                  , persistent-sqlite
                  , persistent-template
                  , resourcet
                  , safe
                  , telegram-api
                  , text

executable TaskBot
  hs-source-dirs:      exe
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

  build-depends:       aeson
                     , base
                     , bytestring
                     , HTTP
                     , http-client
                     , http-client-tls
                     , http-conduit
                     , http-types
                     , monad-control
                     , monad-logger
                     , mtl
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , resourcet
                     , safe
                     , telegram-api
                     , template-haskell
                     , text

                     , TaskBot

test-suite test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

  build-depends:      base
                    , tasty
                    , tasty-hunit

                    , TaskBot

source-repository head
  type:     git
  location: https://github.com/MCL1303/TaskBot
